# Portfolio-Version2

./: Pipfile  pyproject.toml  readme.md
app/: __init__.py
app/main/: routes.py
app/static/: main.css
app/templates/: home.html  layout.html
app/templates/errors/: 403.html  404.html  500.html
