[tool.poetry]
name = "portfolioversion2"
version = "0.1.0"
description = ""
authors = ["sanjeevz3009 <sanjeevz1717@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
frozen-flask = "^1.0.1"
markdown = "^3.5.1"
flake8 = "^6.1.0"
pylint = "^3.0.2"
black = "^23.11.0"
bandit = "^1.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
